# yew-tauri-demo

./: LICENSE  README.md
frontend/: Cargo.toml  index.html  package-lock.json  package.json
frontend/public/: glue.js  main.css  readme.md  tauri.glue.bundle.js  tauri.glue.bundle.ts  tsconfig.json
frontend/public/tauriglue/: event.ts  tauri.ts  window.ts
frontend/public/tauriglue/helpers/: event.ts  tauri.ts
frontend/src/: binding.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
